# lhy-bazzi

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.tmp_wheels/: magic_pdf-0.10.6-py3-none-any.whl  marker_pdf-1.10.2-py3-none-any.whl
app/: __init__.py  config.py  main.py
app/agents/: critic_agent.py  graph.py  reasoning_agent.py  retrieval_agent.py  router_agent.py  state.py  synthesizer_agent.py
app/api/: deps.py
app/api/v1/: chat.py  knowledge.py  parse.py  router.py  system.py
app/core/: __init__.py  database.py  es_client.py  llm_provider.py  milvus_client.py  minio_client.py  mq_consumer.py  qa.py  redis_client.py  retrieval.py
app/models/: chunk.py  db_models.py  document.py  enums.py  schemas.py
app/repositories/: __init__.py  chunk_repo.py  document_file_repo.py  parse_task_repo.py
app/services/chunking/: __init__.py  chunker.py  semantic_chunker.py  structural_chunker.py  table_chunker.py  token_utils.py
app/services/embedding/: __init__.py  embedder.py  model_manager.py
app/services/indexing/: __init__.py  es_indexer.py  indexer.py  milvus_indexer.py
app/services/parsing/: __init__.py  base.py  classifier.py  docx_parser.py  engine.py  excel_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  quality.py  text_parser.py
app/services/qa/: __init__.py  qa_engine.py  query_understanding.py  response_synthesizer.py
app/services/retrieval/: __init__.py  fulltext_retriever.py  fusion.py  hybrid_retriever.py  models.py  permission_filter.py  reranker.py  vector_retriever.py
app/tasks/: celery_app.py  parse_task.py
app/utils/: exceptions.py
configs/: config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml
docker/: Dockerfile  docker-compose.infra.yml  docker-compose.yml
docker/nginx/: nginx.conf
scripts/: download_models.py  init_es.py  init_milvus.py  test_parse_chunk.py
tests/: conftest.py  test_chat_trace_and_schema.py  test_chunking.py  test_milvus_sparse_fallback.py  test_minio_object_ref.py
